...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/accountBtn"
                    android:contentDescription="Account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_anchor="@id/app_bar"
                    app:srcCompat="@drawable/ic_round_person_24"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/ConCat"
                            android:layout_width="@dimen/main_button_width"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_baseline_airplanemode_active_24"
                            android:text="Launch" />

                        <View
...
